# yukio

./: .dockerignore  .env  .gitignore  API_ENDPOINTS_AUDIT.md  AUDIO_LIBRARIES_DOCS.md  CAREER_COACHING_UPDATE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTEXT_AND_SECURITY.md  Dockerfile  FIXES_APPLIED.md  GAMIFICATION_COMPLETE.md  GAMIFICATION_ENHANCEMENT.md  GAMIFICATION_FINAL.md  GAMIFICATION_IMPLEMENTATION_STATUS.md  ISSUES_FIXED.md  KOKORO_QUICK_SETUP.md  KOKORO_SETUP.md  LANGGRAPH_INTEGRATION_COMPLETE.md  LANGGRAPH_ORCHESTRATION.md  MECAB_SETUP.md  REACT_IMPLEMENTATION.md  README.md  STT_IMPLEMENTATION.md  TTS_AUDIO_INTEGRATION.md  TTS_IMPLEMENTATION.md  audit_results.json  cli.py  docker-compose.yml  langgraph.md  pyproject.toml  start_with_native_tts.sh
agent/: __init__.py  agent.py  api.py  db_utils.py  edges.py  gamification.py  graph.py  graph_utils.py  memory_utils.py  models.py  nodes.py  prompts.py  providers.py  react_executor.py  reasoning.py  security.py  state.py  stt.py  tools.py  tts.py
dia/: pyproject.toml
docs/: DATABASE_SCHEMA.md  api_reference.md  development_setup.md  ingestion.md  tts_voice.md
examples/: tts_demo.py
ingestion/: chunker.py  demo_comparison.py  embedder.py  ingest.py  japanese_processor.py
scripts/: audit_yukio.py  clean_markdown.py  convert_pdfs.py  diagnose_schema.py  fix_vector_search.py  ingest_resume.py  init_user.py  quick_test.sh  setup_mecab.sh  test_ingestion.py  test_kokoro_voices.py  test_resume_rag.py  test_resume_tool.py  test_tts.py  test_tts_audio.py  test_tts_playback.py  test_yukio.py
(+53 files in other folders)
