[project]
name = "yukio-agent"
version = "0.1.0"
description = "Yukio Japanese Tutor Agent"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.5.3",
    "pydantic>=1.8.0",
    "pydantic_ai>=1.39.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "PyMuPDF>=1.19.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.6.3",
    "markdown>=3.3.4",
    "sentence-transformers>=2.2.0",
    "nltk>=3.6.3",
    "spacy>=3.2.0",
    "lancedb>=0.1.0",
    "tqdm>=4.62.3",
    "click>=8.0.3",
    "python-multipart>=0.0.5",
    "pykakasi>=2.2.1",
    "aiohttp>=3.9.5",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "kokoro>=0.9.4",
    "pyopenjtalk>=0.4.1",
    "soundfile>=0.13.1",
    "fugashi>=1.5.2",
    "mojimoji>=0.0.13",
    "pygame",
    "playsound",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.12b0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]
tts-kokoro = [
    "kokoro>=0.1.0",  # Anime-style Japanese TTS (optional, for waifu voice)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
